fix layout issues

--- a/staff/groups/los-ninjas/skybrary/src/components/Detail/index.scss
+++ b/staff/groups/los-ninjas/skybrary/src/components/Detail/index.scss
@@ -1,21 +1,15 @@
-
-
 .card-detail {
-
-    background-color: rgba(220, 215, 215, 0.6);
+    background-color: rgba(255, 255, 255, 0.85);
     box-shadow: 0px 3px 3px rgba(0, 0, 0, .15);
     border-radius: 20px;
     max-height: 800px;
     max-width: 660px;
     margin: 0 auto;
-    // width: 100%;
     align-items: center;
-    font-family: 'Montserrat';
     padding: 24px;
 
     &__image {
-        
-        img{ 
+        img{
             max-height: 400px;
         }
     }
